--- a/complete-ng-course/complete/src/app/app.component.html
+++ b/complete-ng-course/complete/src/app/app.component.html
@@ -20,4 +20,9 @@
 <section7></section7>
 <hr>
 <section8></section8>
+<hr>
+<section9></section9>
+<hr>
+<section10></section10>
+
 <router-outlet></router-outlet>
