--- a/complete-ng-course/complete/src/app/section8/form-builder/form-builder.component.html
+++ b/complete-ng-course/complete/src/app/section8/form-builder/form-builder.component.html
@@ -1,1 +1,22 @@
 <h2>102. FormBuilder</h2>
+<form [formGroup]="formByFb">
+  <!--  note the formGroupName -->
+  <div formGroupName="contact">
+    <div class="form-group">
+      <label for="email">email</label>
+      <input formControlName="email"
+             id="email"
+             type="text"
+             class="form-control">
+    </div>
+    <div class="form-group">
+      <label for="phone">phone</label>
+      <input formControlName="phone"
+             id="phone"
+             type="text"
+             class="form-control">
+    </div>
+  </div>
+  <button class="btn btn-primary" type="submit">Sign Up</button>
+</form>
+
