--- a/complete-ng-course/05-building-reusable-compoents/section5/src/app/panel/panel.component.html
+++ b/complete-ng-course/05-building-reusable-compoents/section5/src/app/panel/panel.component.html
@@ -1,9 +1,11 @@
 <p>panel works!</p>
 <div class="card">
   <div class="card-header">
+    61. ngContent >
     <ng-content select=".heading"></ng-content>
   </div>
   <div class="card-body">
+    61. ngContent
     <ng-content select=".body"></ng-content>
   </div>
 </div>
