--- a/complete-ng-course/05-building-reusable-compoents/section5/src/app/course/course.component.html
+++ b/complete-ng-course/05-building-reusable-compoents/section5/src/app/course/course.component.html
@@ -5,9 +5,9 @@
 </style>
 
 <p>course works!</p>
-<fa-icon [icon]="icon" class="glyphicon" [class.glyphicon-star]="isSelected" [class.glyphicon-star-empty]="!isSelected" (click)="onClick()">
+<fa-icon [icon]="icon" class="glyphicon" [class.glyphicon-star]="isSelected" [class.glyphicon-star-empty]="!isSelected" (click)="onIconClick()">
 </fa-icon>
 
  <div>
-    <button (click)="onClick()" class="btn {{!isFavorite?'btn-info':''}}" [class.btn-primary]="isFavorite">Favourite</button>
+    <button (click)="onIconClick()" class="btn {{!isFavorite?'btn-info':''}}" [class.btn-primary]="isFavorite">Favourite</button>
  </div>
